--- a/src/patternfly/sass-utilities/mixins.scss
+++ b/src/patternfly/sass-utilities/mixins.scss
@@ -276,37 +276,13 @@
   }
 }
 
-// Register the property type for the custom property to be animatable
-@mixin pf-v6-animate-danger-translateX($element) {
-  @property  --#{$element}--m-danger--TranslateX {
-    syntax: "<length>";
-    inherits: false;
-    initial-value: 0;
-  }
-}
-
 // Animate error state on form elements
-@mixin pf-v6-animate-danger-jiggle($element) {
-  --#{$element}--m-danger--AnimationDuration--Transform: var(--pf-t--global--motion--duration--fade--default);
-  --#{$element}--m-danger--AnimationTimingFunction--Transform: var(--pf-t--global--motion--timing-function--default);
-
-  translate: var(--#{$element}--m-danger--TranslateX, 0);
-  animation-name: #{$element}-m-danger-motion;
-  animation-duration: var(--#{$element}--m-danger--AnimationDuration--Transform);
-  animation-timing-function: var(--#{$element}--m-danger--AnimationTimingFunction--Transform);
+@mixin pf-v6-animate-danger-jiggle {
+  translate: var(--#{$pf-global}--danger-jiggle--TranslateX, 0);
+  animation-name: #{$pf-global}-danger-jiggle-motion;
+  animation-duration: var(--#{$pf-global}--danger-jiggle--AnimationDuration--Transform);
+  animation-timing-function: var(--#{$pf-global}--danger-jiggle--AnimationTimingFunction--Transform);
   animation-fill-mode: both;
-
-  @media (prefers-reduced-motion: no-preference) {
-    @keyframes #{$element}-m-danger-motion {
-      33% {
-        --#{$element}--m-danger--TranslateX: -2px;
-      }
-      
-      66% {
-        --#{$element}--m-danger--TranslateX: 3px;
-      }
-    }
-  }
 }
 
 // Animate default fade in/out
@@ -317,26 +293,6 @@
   animation-name: $fade;
   animation-duration: var(--#{$element}--TransitionDuration--Opacity);
   animation-timing-function: var(--#{$element}--TransitionTimingFunction--Opacity);
-  
-  @keyframes #{$pf-global}-fade-in {
-    from {
-      opacity: 0;
-    }
-
-    to {
-      opacity: 1;
-    }
-  }
-
-  @keyframes #{$pf-global}-fade-out {
-    from {
-      opacity: 1;
-    }
-
-    to {
-      opacity: 0;
-    }
-  }
 }
 
 // Build variable stack
