--- a/src/patternfly/components/DualListSelector/dual-list-selector.scss
+++ b/src/patternfly/components/DualListSelector/dual-list-selector.scss
@@ -220,20 +220,34 @@ $pf-v6-c-dual-list-selector__item--MaxNesting: 10;
     --#{$dual-list-selector}__item--PaddingInlineStart: var(--#{$dual-list-selector}__item--m-expandable--PaddingInlineStart);
 
     > .#{$dual-list-selector}__list {
+      &:where([hidden]) {
+        display: flex;
+      }
+
+      display: none;
       opacity: var(--#{$dual-list-selector}__list--Opacity);
       transition-timing-function: var(--#{$dual-list-selector}__list--TransitionTimingFunction);
-      transition-duration: var(--#{$dual-list-selector}__list--TransitionDuration--fade), var(--#{$dual-list-selector}__list--TransitionDuration--slide);
-      transition-property: opacity, translate;
+      transition-duration: var(--#{$dual-list-selector}__list--TransitionDuration--fade), var(--#{$dual-list-selector}__list--TransitionDuration--slide), var(--#{$dual-list-selector}__list--TransitionDuration--fade);
+      transition-property: opacity, translate, display;
+      transition-behavior: allow-discrete;
       translate: 0 var(--#{$dual-list-selector}__list--TranslateY);
     }
   }
 
   &.pf-m-expanded {
     --#{$dual-list-selector}__item-toggle-icon--Rotate: var(--#{$dual-list-selector}__list-item--m-expanded__item-toggle-icon--Rotate);
-    --#{$dual-list-selector}__list--TransitionDuration--slide: var(--#{$dual-list-selector}__list--TransitionDuration--expand--slide);
-    --#{$dual-list-selector}__list--TransitionDuration--fade: var(--#{$dual-list-selector}__list--TransitionDuration--expand--fade);
-    --#{$dual-list-selector}__list--Opacity: var(--#{$dual-list-selector}--m-expanded__list--Opacity);
-    --#{$dual-list-selector}__list--TranslateY: var(--#{$dual-list-selector}--m-expanded__list--TranslateY);
+
+    > .#{$dual-list-selector}__list {
+      display: revert;
+      opacity: var(--#{$dual-list-selector}--m-expanded__list--Opacity);
+      transition-duration: var(--#{$dual-list-selector}__list--TransitionDuration--expand--fade), var(--#{$dual-list-selector}__list--TransitionDuration--expand--slide), var(--#{$dual-list-selector}__list--TransitionDuration--expand--fade);
+      translate: 0 var(--#{$dual-list-selector}--m-expanded__list--TranslateY);
+
+      @starting-style {
+        --#{$dual-list-selector}--m-expanded__list--Opacity: 0;
+        --#{$dual-list-selector}--m-expanded__list--TranslateY: -.5rem;
+      }
+    }
   }
 
   &.pf-m-disabled {
