feat(progress-stepper): spinner alt (#7504)
* feat(progress-stepper): spinner alt

* chore(progress-stepper): examples

* chore(progress stepper): text changes

--- a/src/patternfly/components/ProgressStepper/progress-stepper-step-icon.hbs
+++ b/src/patternfly/components/ProgressStepper/progress-stepper-step-icon.hbs
@@ -10,6 +10,8 @@
       <i class="pf-v6-pficon pf-v6-pficon-resources-full" aria-hidden="true"></i>
     {{else if progress-stepper-step--IsInProgressAlt}}
       <i class="pf-v6-pficon pf-v6-pficon-in-progress" aria-hidden="true"></i>
+    {{else if progress-stepper-step--IsInProgressAnimate}}
+      {{#> spinner spinner--modifier="pf-m-xs"}}Loading...{{/spinner}}
     {{else if progress-stepper-step--IsComplete}}
       <i class="fas fa-check-circle" aria-hidden="true"></i>
     {{else if progress-stepper-step--IsFailure}}
